Remove scrollbars from rate charts and links for ADA issues.

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -754,12 +754,12 @@ h1.project-wide {
   font-size: 3.875rem;
   padding-bottom: 1rem;
   line-height: 2.875rem;
-  color: #888;
+  color: #666; /* was #888; darkened to meet WCAG AA on white */
 }
 
 .content-header {
   font-size: 2.875rem;
-  color: #888;
+  color: #666; /* was #888; darkened to meet WCAG AA on white */
 }
 
 @media only screen and (max-width: 991px) {
